--- a/.github/workflows/daily-digest.yml
+++ b/.github/workflows/daily-digest.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # UTC 0:00 = 北京时间 8:00
     - cron: '0 0 * * *'
-  workflow_dispatch: # 支持手动触发
+  workflow_dispatch:
 
 jobs:
   generate-digest:
