--- a/.github/workflows/daily-digest.yml
+++ b/.github/workflows/daily-digest.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Generate daily digest
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          NETEASE_FUXI_API_KEY: ${{ secrets.NETEASE_FUXI_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
           OPENAI_API_BASE: https://api.deepseek.com/v1
           OPENAI_MODEL: deepseek-chat
